# wuhan-trans

./: .gitignore  PRIVACY.md  README.md  project.yml
Shared/: ConversationMessage.swift  PeerMessage.swift  SupportedLanguage.swift  WatchMessage.swift
VoiceTranslate/App/: ContentView.swift  VoiceTranslateApp.swift
VoiceTranslate/Features/Conversation/: ConversationView.swift  MessageBubble.swift  (+1 more)
VoiceTranslate/Intents/: AppShortcuts.swift  RecordTranslateIntent.swift
VoiceTranslate/Models/: ASREngine.swift  TranslationEngine.swift
VoiceTranslate/Services/: ModelDownloader.swift  PhoneConnectivityService.swift
VoiceTranslate/Utilities/: LanguageDetection.swift  MemoryMonitor.swift
VoiceTranslateWatch/: Info.plist
VoiceTranslateWatch/App/: VoiceTranslateWatchApp.swift
VoiceTranslateWatch/Features/: WatchConversationView.swift  WatchMessageRow.swift
VoiceTranslateWatch/Services/: WatchAudioRecorder.swift  WatchConnectivityClient.swift  WatchCrashLog.swift  WatchTranslator.swift
appstore/: metadata.txt
docs/: app-specs.md
fastlane/: Appfile  Fastfile  README.md  report.xml
relay-server/: Cargo.toml  README.md  conversations.db
relay-server/src/: db.rs  main.rs
scripts/: compile-cohere.sh  convert-belle.sh  cross_build_on_mac.sh  deploy-config.toml  deploy_to_server.sh  generate-project.sh  generated-nginx-voice.rlxapi.eu.conf  prepare-appstore.sh  setup-env.sh
scripts/sites-available/: bimifc.de  default  eulumdat.de  eulumdat.eu  eulumdat.icu  iesna.eu  nannakolla.com  opticsvalley.wuhan.eu  rlxapi.eu  videocall.iesna.eu  voice.rlxapi.eu
(+35 files in other folders)
